syntax = "proto3";

package user;

enum Gender {
  MALE = 0;
  FEMALE = 1;
}

message User {
  string id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string phoneNumber = 5;
  string password = 6;
  string avatarUrl = 7;
  string profile = 8;
  string location = 9;
  string website = 10;
  string birthDate = 11;
  Gender gender = 12;
  string createdAt = 13;
  string updatedAt = 14;
}

message CreateUserRequest {
  string username = 1;
  string name = 2;
  string email = 3;
  string phoneNumber = 4;
  string password = 5;
  optional string avatarUrl = 6;
  optional string profile = 7;
  optional string location = 8;
  optional string website = 9;
  optional string birthDate = 10;
  Gender gender = 11;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string name = 3;
  optional string email = 4;
  optional string phoneNumber = 5;
  optional string password = 6;
  optional string avatarUrl = 7;
  optional string profile = 8;
  optional string location = 9;
  optional string website = 10;
  optional string birthDate = 11;
  optional Gender gender = 12;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}